php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55014 Error Compiling: too many arguments to function `ctime_r'
Submitted: 2011-06-09 14:01 UTC Modified: 2011-07-11 13:01 UTC
From: rosnerb at htw-berlin dot de Assigned: iliaa (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.3.6 OS: Solaris 10
Private report: No CVE-ID: None
 [2011-06-09 14:01 UTC] rosnerb at htw-berlin dot de
Description:
------------
/prog/src/php-5.3.6/main/reentrancy.c: In function `php_ctime_r':
/prog/src/php-5.3.6/main/reentrancy.c:63: error: too many arguments to function `ctime_r'
/prog/src/php-5.3.6/main/reentrancy.c: In function `php_asctime_r':
/prog/src/php-5.3.6/main/reentrancy.c:70: error: too many arguments to function `asctime_r'
gmake: *** [main/reentrancy.lo] Error 1

Using gcc version 3.4.3 (csl-sol210-3_4-branch+sol_rpath) on SunOS 5.10 i386 with CFLAGS=-O3 -m64
Following configure options were used, also --disable-all did produce the error. Configure went through without problems. 

./configure --prefix=/prog/apps/php-5.3.6 \
--with-config-file-path=/prog/etc/php \
--sysconfdir=/prog/etc/php \
--with-apxs2=/prog/apps/apache-2.2.18/bin/apxs \
--with-ldap=/prog/apps/openldap-2.4.23 \
--with-openssl=/prog/apps/openssl-1.0.0d \
--with-mysql=/prog/apps/mysql-5.5.12 \
--with-mysqli \
--with-pear \
--with-gettext=/prog/apps/gettext \
--with-jpeg-dir=/prog/apps/jpeg-8c \
--with-png-dir=/prog/apps/libpng-1.5.2 \
--with-zlib=/prog/apps/zlib \
--with-zlib-dir=/prog/apps/zlib \
--with-libxml-dir=/prog/apps/libxml2 \
--with-iconv=/prog/apps/libiconv \
--with-gd=/prog/apps/gd \
--with-mcrypt=/prog/apps/libmcrypt \
--with-imap=/prog/apps/imap-2007e \
--with-imap-ssl=/prog/apps/openssl-1.0.0a \
--with-curl=/prog/apps/curl-7.21.6 \
--with-curlwrappers \
--with-pgsql \
--with-pgsql=/usr/postgres/8.3 \
--enable-ftp \
--with-regex=php \
--enable-zip \
--enable-mbstring \
--enable-ctype \
--enable-sysvshm \
--enable-calendar \
--enable-exif \
--enable-gd-native-ttf \
--enable-sockets \
--enable-safe-mode

Removing third argument '26' of ctime_r() and asctime_r() in line 63 and 70 fixes this error.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-07-11 13:01 UTC] iliaa@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=313144
Log: Fixed bug #55014 (Compile failure due to improper use of ctime_r()).
 [2011-07-11 13:01 UTC] iliaa@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: iliaa
 [2011-07-11 13:01 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:49 UTC] laruence@php.net
Automatic comment on behalf of iliaa
Revision: http://git.php.net/?p=php-src.git;a=commit;h=388a473255244b8ff8daac24802dda8abf967f48
Log: Fixed bug #55014 (Compile failure due to improper use of ctime_r()).
 [2012-07-24 23:40 UTC] rasmus@php.net
Automatic comment on behalf of iliaa
Revision: http://git.php.net/?p=php-src.git;a=commit;h=388a473255244b8ff8daac24802dda8abf967f48
Log: Fixed bug #55014 (Compile failure due to improper use of ctime_r()).
 [2013-11-17 09:37 UTC] laruence@php.net
Automatic comment on behalf of iliaa
Revision: http://git.php.net/?p=php-src.git;a=commit;h=388a473255244b8ff8daac24802dda8abf967f48
Log: Fixed bug #55014 (Compile failure due to improper use of ctime_r()).
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 05:00:01 2026 UTC