Fixed bug #55014 (Compile failure due to improper use of ctime_r()).